# mia.py

./: .gitignore  10-aolab.rules  18.20-aolab.py  18.20-boot.py  18.20-car.py  18.20-curtain.py  18.20-damagh.py  18.20-example.py  18.20-goldoon.py  18.20-green-house.py  18.20-home.py  18.20-mahtab.py  18.20-niligo.py  18.20-presentation.py  18.20-presenter.py  18.20-rfid.py  18.20-taas.py  18.20-zigbee.py  README.md  README.rst  aolab-requirements.txt  aolab.rules  lamp.sh  next.sh  pyproject.toml  requirements.txt
AoLab-Presenter/: presenter.sh
AoLab-nRF/: AoLab-nRF.ino
AoLab/domain/: message.py
AoLab/protocol/: base.py  hasht.py
I1820/: I1820App.py  __init__.py  app.py
I1820/bootstrap/: ping.py  route.py
I1820/conf/: 1820.example.yml
I1820/domain/: agent.py  log.py  notif.py
I1820/log/: log.py
mia_py/AoLab/domain/: message.py
mia_py/AoLab/protocol/: base.py  hasht.py
mia_py/I1820/: app.py
mia_py/I1820/domain/: log.py
projects/: 18.20-rfid.py
projects/aolab/: Pipfile  aolab.py
projects/example/: Pipfile  docker-compose.yml  example.py
projects/green-house/: green-house.py
projects/niligo/: Pipfile  niligo.py
projects/presenter/: Pipfile  presenter.py  presenter.sh
projects/presenter/slides/: .gitignore
